--- a/assets/css/keen-dashboards.css
+++ b/assets/css/keen-dashboards.css
@@ -19,7 +19,7 @@
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
 }
@@ -117,27 +117,27 @@ small,
   list-style: none;
 }
 
-.nav>li>a {
+.nav > li > a {
   position: relative;
   display: block;
   padding: 10px 15px;
 }
 
-.nav-tabs>li>a {
+.nav-tabs > li > a {
   margin-right: 2px;
   line-height: 1.42857143;
   border: 1px solid transparent;
   border-radius: 4px 4px 0 0;
 }
 
-.nav>li>a:hover,
-.nav>li>a:focus {
+.nav > li > a:hover,
+.nav > li > a:focus {
   text-decoration: none;
 }
 
-.nav-tabs>li.active>a,
-.nav-tabs>li.active>a:hover,
-.nav-tabs>li.active>a:focus {
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
   color: #555;
   cursor: default;
   background-color: #fff;
@@ -150,11 +150,11 @@ small,
   list-style: none;
 }
 
-.nav-list>li {
+.nav-list > li {
   display: block;
 }
 
-.nav-list>li>a {
+.nav-list > li > a {
   display: block;
   padding: 10px 15px;
   line-height: 20px;
@@ -162,7 +162,7 @@ small,
   text-decoration: none;
 }
 
-.nav-list>li>a:hover {
+.nav-list > li > a:hover {
   color: #ffffff;
 }
 
@@ -215,7 +215,7 @@ small,
 
 .nav-toggle .icon-bar::before,
 .nav-toggle .icon-bar::after {
-  content: '';
+  content: "";
 }
 
 .nav-toggle .icon-bar::before {
@@ -295,7 +295,7 @@ small,
 
 .navbar-inverse .navbar-collapse {
   border-color: #101010;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
 }
 
 .navbar-inverse .navbar-toggle:hover,
@@ -314,8 +314,8 @@ small,
   fill: #fff;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover,
-.navbar-inverse .navbar-nav>li>a:focus {
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
   color: #fff;
   background-color: transparent;
 }
@@ -335,7 +335,7 @@ small,
 }
 
 .navbar-inverse .navbar-brand,
-.navbar-inverse .navbar-nav>li>a {
+.navbar-inverse .navbar-nav > li > a {
   color: #777;
 }
 
@@ -352,7 +352,7 @@ small,
 .navbar-fixed-bottom {
   bottom: 0;
   margin-bottom: 0;
-  border-width: 1px 0 0
+  border-width: 1px 0 0;
 }
 
 .navbar-fixed-top,
@@ -440,7 +440,7 @@ small,
   background-image: none;
   border: 1px solid #ccc;
   border-radius: 4px;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
 /* BUTTON */
@@ -624,7 +624,6 @@ button {
 }
 
 @media (min-width: 992px) {
-
   .grid-hero-thirds,
   .grid-hero-thirds .grid-hero {
     grid-template-columns: repeat(3, 1fr);
@@ -652,7 +651,8 @@ button {
 .keen-dashboard {
   padding-top: 80px;
   background: #f2f2f2;
-  font-family: 'Gotham Rounded SSm A', 'Gotham Rounded SSm B', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Gotham Rounded SSm A", "Gotham Rounded SSm B", "Helvetica Neue",
+    Helvetica, Arial, sans-serif;
 }
 
 .keen-dataviz {
@@ -678,7 +678,7 @@ button {
   background: #fbfbfb;
   border-radius: 0 0 2px 2px;
   border-top: 1px solid #e7e7e7;
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-size: 11px;
   padding: 0 10px;
 }
@@ -688,7 +688,7 @@ button {
 }
 
 .keen-dataviz .keen-spinner-indicator {
-  border-top-color: rgba(0, 187, 222, .4);
+  border-top-color: rgba(0, 187, 222, 0.4);
 }
 
 .keen-dashboard .chart-wrapper {
