--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,14 @@ a:active {
 h1,
 h2,
 h3 {
-  font-family: "Gotham Rounded", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   margin: 12px 0;
 }
 
 h1 {
   font-size: 32px;
   font-weight: 100;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
   line-height: 48px;
   margin: 12px 0;
 }
@@ -46,40 +46,39 @@ h3 {
 }
 
 .navbar-toggle {
-  background-color: rgba(255, 255, 255, .25);
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 .navbar-toggle .icon-bar {
   background: #fff;
 }
 
-
 .navbar-nav {
   margin: 5px 0 0;
 }
 
-.navbar-nav>li>a {
+.navbar-nav > li > a {
   font-size: 15px;
   font-weight: 200;
   letter-spacing: 0.03em;
   padding-top: 19px;
-  text-shadow: 0 0 2px rgba(0, 0, 0, .1);
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
 }
 
-.navbar-nav>li>a:focus,
-.navbar-nav>li>a:hover {
+.navbar-nav > li > a:focus,
+.navbar-nav > li > a:hover {
   background: transparent none;
 }
 
-.navbar-nav>li>a.navbar-btn {
-  background-color: rgba(255, 255, 255, .25);
+.navbar-nav > li > a.navbar-btn {
+  background-color: rgba(255, 255, 255, 0.25);
   border: medium none;
   padding: 10px 15px;
 }
 
-.navbar-nav>li>a.navbar-btn:focus,
-.navbar-nav>li>a.navbar-btn:hover {
-  background-color: rgba(255, 255, 255, .35);
+.navbar-nav > li > a.navbar-btn:focus,
+.navbar-nav > li > a.navbar-btn:hover {
+  background-color: rgba(255, 255, 255, 0.35);
 }
 
 .navbar-collapse {
@@ -87,7 +86,7 @@ h3 {
 }
 
 .masthead {
-  background-color: #00afd7;
+  background-color: #0b7ed9;
   background-image: url("../img/bg-bars.png");
   background-position: 0 -290px;
   background-repeat: repeat-x;
@@ -111,10 +110,8 @@ h3 {
 .masthead p {
   color: #b3e7f3;
   font-weight: 100;
-  letter-spacing: .05em;
+  letter-spacing: 0.05em;
 }
-
-
 
 .hero {
   background-position: 50% 100%;
@@ -149,7 +146,6 @@ h3 {
   background-color: #fff;
   color: #00afd7;
 }
-
 
 .sample-item {
   margin-bottom: 24px;
